Fix vertical spacings

--- a/scss/project/layout/_elements.scss
+++ b/scss/project/layout/_elements.scss
@@ -50,7 +50,7 @@
 }
 
 %subtitle {
-  margin: -.5em 0 0;
+  margin: -.2em 0 0;
   color: lighten($black, 30%);
   font-size: 1em;
 
