--- a/scss/project/layout/_forms.scss
+++ b/scss/project/layout/_forms.scss
@@ -47,6 +47,10 @@ input[type="checkbox"] {
   vertical-align: middle;
 }
 
+.control {
+  margin-bottom: .5em;
+}
+
 
 %form {
   // %form--fourth
